--- a/SoccerBets/SoccerBets/Pages/LoginPage.xaml
+++ b/SoccerBets/SoccerBets/Pages/LoginPage.xaml
@@ -2,6 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoccerBets.Pages.LoginPage"
-             Title="Soccer Bets"             
+             Title="Soccer Bets"   
+             BackgroundColor="{StaticResource MainColor}"
              BindingContext="{Binding Main, Source={StaticResource Locator}}">
+    <ScrollView
+        BindingContext="{Binding Login}">
+        <StackLayout
+            Padding="8">
+            <Image 
+                Source="logo.png">
+                
+            </Image>
+            
+        </StackLayout>
+        
+    </ScrollView>
 </ContentPage>
